style(blog): fixed bottom margin flaw with nested lists
Had too much bottom margin, when lists were nested. I just wanted the
outer-most list to have bottom margin, to distance it from the content
following the list.

--- a/src/app/blog/post/post.component.scss
+++ b/src/app/blog/post/post.component.scss
@@ -143,4 +143,8 @@ article {
   :not(li) {
     margin-bottom: 1.5rem;
   }
+
+  ul ul {
+    margin-bottom: 0;
+  }
 }
